# Stellite

./: .gitignore  CMakeLists.txt  Include.cmake  LICENSE  README.md  main.cpp
src/: CMakeLists.txt
src/core/: main.cpp
src/tutorials/: SDLTutorials.cpp  SDLTutorials.h
src/tutorials/SDL/: SDLTutorials.h
src/tutorials/TinyRayTracerTutorials/: Aliases.h  Material.cpp  Material.h  Sphere.cpp  Sphere.h  SphereObject.cpp  SphereObject.h  TinyRayTracerTutorials.cpp  TinyRayTracerTutorials.h
